# PDD-customer-bot

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  pyproject.toml
Agent/: bot.py
Agent/CustomerAgent/: agent.py  agent_knowledge.py  knowledge_enhanced.py
Agent/CustomerAgent/custom/: __init__.py  agent_config.py  customer_agent.py  llm_client.py  message_builder.py  session_manager.py  (+2 more)
Channel/: channel.py
Channel/pinduoduo/: pdd_channel.py  pdd_chnnel.py  pdd_login.py  pdd_message.py  websocket_config.json
Message/: __init__.py  message.py
Message/core/: __init__.py  consumer.py  handlers.py  queue.py
Message/handlers/: __init__.py  ai_handler.py  base.py  keyword_handler.py  preprocessor.py
Message/models/: __init__.py  queue_models.py
bridge/: __init__.py  context.py
core/: __init__.py  base_service.py  cache.py  connection_status.py  di_container.py  service_providers.py
database/: __init__.py  connection_pool.py  db_manager.py  knowledge_service.py  models.py  product_sync.py
scripts/: README.md  agent_customer.spec  build_exe.py  build_win_exe.py  install_playwright.py  version_info.txt
ui/: Knowledge_ui.py  auto_reply_ui.py  log_ui.py  main_ui.py  setting_ui.py  user_ui.py
ui/auto_reply/: __init__.py  card.py  manager.py  threads.py  ui.py
ui/knowledge/: __init__.py  data_loader.py  exceptions.py  models.py  widgets.py
utils/: __init__.py  async_helper.py  encoding_helper.py  file_validator.py  logger_config.py  logger_loguru.py  logging_context.py  path_utils.py  resource_manager.py  runtime_path.py  volcengine_models.py
(+23 files in other folders)
