[project]
name = "agent-customer"
version = "1.1.0"
description = "电商AI客服"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.52.0",
    "websockets>=10.4",
    "requests>=2.28.0",
    "pyqt6>=6.9.0",
    "pydantic>=2.5.0",
    "pyqt6-fluent-widgets>=1.9.0",
    "sqlalchemy>=2.0.43",
    "openai>=1.109.1",
    "pillow>=12.0.0",
    "aiofiles>=25.1.0",
    "pandas>=2.1.0,<2.3.0",
    "numpy>=1.24.0,<2.0.0",
    "loguru>=0.7.0",
    "pypdf",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "volcengine>=1.0.209",
    "aiohttp>=3.13.2",
    "tiktoken>=0.12.0",
    "jieba>=0.42.1",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Agent", "Channel", "Message", "bridge", "core", "database", "ui", "utils", "scripts"]
